test/tests/stages/18_structures/invalid_types/scalar_required/cast_to_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  (
  struct
  identifier(s)
  )
  identifier(x)
  ;
  }
